name:                authochan
version:             0.1.0.0
synopsis:            Auth{entication,orisation}
description:         Authenticate and authorise a user for associated
                     servers with a handle with a secret part and a
                     nonce. オートちゃんです。
homepage:            https://secure.plaimi.net/works/authochan
license:             AGPL-3
license-file:        LICENSE
author:              plaimi
maintainer:          tempuhs@plaimi.net
copyright:           (c) plaimi 2014-2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Authochan.Database
                     Authochan.Key
                     Authochan.Message
                     Authochan.HTTP
                     Authochan.HTTP.Parse
  other-extensions:  GADTs
                     GeneralizedNewtypeDeriving
                     MultiParamTypeClasses
                     OverloadedStrings
                     QuasiQuotes
                     TemplateHaskell
                     TypeFamilies
                     TypeSynonymInstances
  build-depends:     base >=4.6 && <4.8,
                     attoparsec >=0.12 && <0.13,
                     base16-bytestring >=0.1 && <0.2,
                     bytestring >=0.10 && <0.11,
                     case-insensitive >=1.2 && <1.3,
                     cryptohash >=0.11 && <0.12,
                     http-types >=0.8 && <0.9,
                     monadcryptorandom >=0.6 && <0.7,
                     mtl >=2.2 && <2.3,
                     persistent >=2.0 && <2.3,
                     persistent-template >=2.0 && <2.3,
                     stringsearch >=0.3 && <0.4,
                     text >=1.1 && <1.3,
                     transformers >=0.3 && <0.5,
                     wai >=3.0 && <3.1
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite properties
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Properties.hs
  other-modules:     Test.MutableGen
  other-extensions:  OverloadedStrings
  build-depends:     base,
                     authochan,
                     blaze-builder >=0.3 && <0.4,
                     byteable >=0.1 && <0.2,
                     bytestring >=0.10 && <0.11,
                     case-insensitive >=1.2 && <1.3,
                     cryptohash >=0.11 && <0.12,
                     DRBG >=0.5 && <0.6,
                     http-types >=0.8 && <0.9,
                     monadcryptorandom >=0.6 && <0.7,
                     persistent >=2.0 && <2.3,
                     QuickCheck >=2.7 && <2.8,
                     stringsearch >=0.3 && <0.4,
                     tagged >=0.7 && <0.8,
                     test-framework >=0.8 && <0.9,
                     test-framework-quickcheck2 >=0.3 && <0.4,
                     text >=1.1 && <1.3,
                     tuple >=0.3 && <0.4,
                     wai >=3.0 && <3.1,
                     wai-extra >=3.0 && <3.1
  default-language:  Haskell2010
